Fixed the too many fetches whenever the user was reaching the footer of a posts section, also removed the css properties to disable the wrap behavior on the text on the dream trips list

--- a/src/styles/3.Components/pageSignup/extraDataForm/_dreamTripsDivision.scss
+++ b/src/styles/3.Components/pageSignup/extraDataForm/_dreamTripsDivision.scss
@@ -53,10 +53,6 @@
             opacity: 0;
             animation: liAnim 0.3s 0.3s ease-in-out forwards;
             @include flexBetweenCentered;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            height: 23px;
             &::after {
                 content: "";
                 position: absolute;
